--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-netview_venv
+netview_venv/
+netview_env/
 
 # Spyder project settings
 .spyderproject
@@ -131,4 +132,4 @@ dmypy.json
 
 # IDE
 .idea
-src/graph/.vscode
+.vscode/
