--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = django-NetView
-version = 0.9991
+version = 0.9995
 description = A simple Django app to view and modify graphs on a web browser.
 long_description = file: README.rst
 url = https://github.com/danielgiampaolo/CIS4930_Python
-author = Adrian Salazar
+author = CIS4930 NetView Team
 author_email = adrian.salazar@ufl.edu
 
 [options]
