I can't see this parser working cause of memory allocation needing to happen before and for fluid communication between c and python.

--- a/src/graph/CMakeLists.txt
+++ b/src/graph/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.2)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project("c_graph")
-set(SOURCE_FILES c_graph.cpp)
+set(SOURCE_FILES csv_parser.cpp c_graph.cpp)
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
