--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,11 @@ src/graph/cmake_install.cmake
 src/graph/CMakeCache.txt
 src/graph/Makefile
 
+# removing from root folder
+CMakeFiles/
+cmake_install.cmake
+CMakeCache.txt
+Makefile
 
 # Flask stuff:
 instance/
@@ -141,8 +146,9 @@ dmypy.json
 # PyCharm garbage
 .idea/
 
-# VsCode Bs
+# vscode bs
 .vscode/
+*.code-workspace
 
 src/graph/graph.cbp
 
